<resources>
    <string name="app_name">File Manager</string>

    <string name="allow_access">Allow access to your files so File Manager can help you find and share your files easily.</string>
    <string name="allow">Allow</string>

    <string name="show_modified">Show modified files</string>
    <string name="sort">Sort</string>

    <string name="newest_first">Newest first</string>
    <string name="oldest_first">Oldest first</string>
    <string name="largest_first">Largest first</string>
    <string name="smallest_first">Smallest first</string>
    <string name="name_a_z">Name A to Z</string>
    <string name="name_z_a">Name Z to A</string>

    <string name="cant_open_file">Can\'t open file</string>

    <string name="share_file">Share file with others</string>
</resources>
