<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="12dp"
        android:text="@string/sort"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/newest_first_sort_option"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="18dp"
        android:text="@string/newest_first"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/oldest_first_sort_option"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="18dp"
        android:text="@string/oldest_first"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/largest_first_sort_option"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="18dp"
        android:text="@string/largest_first"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/smallest_first_sort_option"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="18dp"
        android:text="@string/smallest_first"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/name_a_z_sort_option"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="18dp"
        android:text="@string/name_a_z"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/name_z_a_sort_option"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="18dp"
        android:text="@string/name_z_a"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp" />

</LinearLayout>