<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:menu="@menu/main_menu"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name" />


    <View
        android:id="@+id/toolbar_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:splitMotionEvents="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_divider"
        tools:listitem="@layout/list_item_file" />

    <TextView
        android:id="@+id/grant_permission_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="300dp"
        android:text="@string/allow_access"
        android:textColor="?attr/colorOnBackground"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/grant_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        tools:visibility="gone" />

    <Button
        android:id="@+id/grant_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        android:text="@string/allow"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/grant_permission_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/grant_permission_text"
        app:layout_constraintTop_toBottomOf="@+id/grant_permission_text"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
